# gonet_pytorch

./: .gitignore  README.md  environment.yml  evaluate_gonet.py  pyproject.toml  train_fl.py  train_gan.py  train_gonet_t.py  train_invg.py
datasets/: go_stanford.py  go_stanford_temporal.py
models/: gonet.py  gonet_temporal.py
tools/: apply_ema_to_gonet.py  benchmark_inference_speed.py  benchmark_stateful_gonet_t.py  build_unlabelled_sequence_manifest.py  compare_gonet_gonett_ema_video.py  compare_gonet_vs_gonet_t.py  compare_temporal_smoothing_metrics.py  infer_unlablelled_gs.py  inspect_preprocessing.py  inspect_temporal_dataset.py  pseudo_label_unlabelled_manifest.py  run_gonet_t_full_inference.py  summarize_ema_results.py  summarize_gonet_t_comparisons.py  sweep_threshold.py  visualize_pseudo_labels.py
