[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gonet-pytorch"
version = "0.1.0"
description = "PyTorch reproduction of GONet for GO Stanford traversability estimation"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["datasets*", "models*", "tools*"]